fix(auth): resolve Firebase OTP validation error and support direct JWT payload fallback